crates/arcan-tui/src/widgets/snapshots/arcan_tui__widgets__chat_log__tests__snapshot_empty_chat.snap
---
source: crates/arcan-tui/src/widgets/chat_log.rs
assertion_line: 140
expression: output
---
┌ Session Log ─────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
