crates/arcan-tui/src/widgets/snapshots/arcan_tui__widgets__chat_log__tests__snapshot_human_and_assistant.snap
---
source: crates/arcan-tui/src/widgets/chat_log.rs
assertion_line: 160
expression: output
---
┌ Session Log ─────────────────────────────────────────────┐
│[12:30] You: Hello, agent!                                │
│[12:30] Assistant:                                        │
│Hi! How can I help you today?                             │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
