crates/arcan-tui/src/widgets/snapshots/arcan_tui__widgets__chat_log__tests__snapshot_streaming_with_cursor.snap
---
source: crates/arcan-tui/src/widgets/chat_log.rs
assertion_line: 193
expression: output
---
┌ Session Log ─────────────────────────────────────────────┐
│Assistant: Thinking about this... █                       │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
