crates/arcan-tui/src/widgets/snapshots/arcan_tui__widgets__chat_log__tests__snapshot_tool_execution.snap
---
source: crates/arcan-tui/src/widgets/chat_log.rs
assertion_line: 180
expression: output
---
┌ Session Log ─────────────────────────────────────────────┐
│[12:30] Tool fs.read [OK]                                 │
│       args: {"path":"main.rs"}                           │
│       result: file contents...                           │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
